fix positionning and sizeing on mobile

--- a/app/CardPop/styles.module.scss
+++ b/app/CardPop/styles.module.scss
@@ -55,7 +55,7 @@
         letter-spacing: -5px;
 
     }
-    @media (max-width: 1024px){
+    @media (min-width:768px) and (max-width: 1024px){
         font-size: clamp(2em, 8em, 10em);
         letter-spacing: -5px;
     }
@@ -72,7 +72,7 @@
         font-size: clamp(2em, 4em, 10em);
         letter-spacing: -5px;
     } 
-    @media (max-width: 1024px){
+    @media (min-width:768px) and (max-width: 1024px){
         font-size: clamp(2em, 8em, 10em);
         letter-spacing: -5px;
     }
@@ -98,13 +98,13 @@
     text-transform: uppercase;
     font-size: 11px;
     font-weight: bold;
-
+    z-index: 3;
     .topLeft{
         position: absolute;
         left: 2%;
         top: 2%;
         @media (max-width: 768px){
-            top:38%;
+            top:30%;
             left:3%;
         }
     }
@@ -113,7 +113,7 @@
         right: 2%;
         top: 2%;
         @media (max-width: 768px){
-            top:38%;
+            top:30%;
             right:3%;
         }
     }
@@ -122,7 +122,7 @@
         left: 2%;
         top: 90%;
         @media (max-width: 768px){
-            top:63%;
+            top:70%;
             left:5%;
         }
     }
@@ -131,7 +131,7 @@
         right: 2%;
         top: 90%;
         @media (max-width: 768px){
-            top:63%;
+            top:70%;
             right:5%;
         }
     }
